<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="jump_to_first">Jump To First Crime</string>
    <string name="jump_to_last">Jump To Last Crime</string>
    <string name="date_picker_title">Date of Crime:</string>
    <string name="time_picker_title">Time of Crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Total</string>
    <string name="hide_subtitle">Hide Total</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="delete_crime">Delete</string>

</resources>
